# mcp-context-forge

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  CHANGELOG.md  CLAUDE.md  Containerfile  Containerfile.lite  DEVELOPING.md  MANIFEST.in  MULTIPLATFORM-DOCKER-SUPPORT.md  Makefile  README.md  Taskfile.yml  docker-compose.yml  doctest_fixes.txt  doctest_status.txt  feed_rss_created.xml  feed_rss_updated.xml  gunicorn.config.py  index.html  pyproject.toml  sitemap.xml  smoketest.py  structure.txt  test_fix_summary.txt  test_url_utils_coverage.py
.github/: trigger-test.md
architecture/: index.html
blog/: index.html
coverage/: class_index.html  function_index.html  index.html  status.json  z_095c6c0b4411cdd5_admin_auth_py.html  z_095c6c0b4411cdd5_auth_logging_py.html  z_095c6c0b4411cdd5_create_jwt_token_py.html  z_095c6c0b4411cdd5_create_slug_py.html  z_095c6c0b4411cdd5_db_isready_py.html  z_095c6c0b4411cdd5_display_name_py.html  z_095c6c0b4411cdd5_error_formatter_py.html  z_095c6c0b4411cdd5_jwt_config_helper_py.html  z_095c6c0b4411cdd5_metadata_capture_py.html  z_095c6c0b4411cdd5_metrics_common_py.html  z_095c6c0b4411cdd5_oauth_encryption_py.html  z_095c6c0b4411cdd5_orjson_response_py.html  z_095c6c0b4411cdd5_pagination_py.html  (+124 more)
deployment/: index.html
plugins_rust/: Cargo.toml  Makefile
plugins_rust/benches/: pii_filter.rs
plugins_rust/benchmarks/: compare_pii_filter.py
plugins_rust/src/: lib.rs
plugins_rust/src/pii_filter/: config.rs  detector.rs  masking.rs  mod.rs  patterns.rs
plugins_rust/tests/: integration.rs
(+462 files in other folders)
