[package]
name = "plugins_rust"
version = "0.9.0"
edition = "2021"
authors = ["MCP Gateway Contributors"]
description = "High-performance Rust implementations of MCP Gateway plugins"
license = "Apache-2.0"
repository = "https://github.com/IBM/mcp-context-forge"

[lib]
name = "plugins_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py311"] }
regex = "1.10"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
sha2 = "0.10"
uuid = { version = "1.6", features = ["v4"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[[bench]]
name = "pii_filter"
harness = false
